2001-09-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: undid the fix I made to returning party items
	(Jeff's fix worked better :-) )
	* usecode/ucinternal.*: fixed bug with remove_party_items

2001-09-05  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/contain.cc (Container_game_object): Fixed add_quantity() so
	it deals correctly with volume, quality.  (Still doesn't check
	weight, though.)
	* objs/contain.cc: add_quantity() checks weight.

	* shapes/shapeinf.h:  has_quantity(), has_quality() added.

2001-09-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* game.cc, bggame.cc, sigame.cc, usecode/intrinsics.cc, txtscroll.*:
	do not show quotes entry until user has watched through entire credits
	sequence. Also do not show endgame entry until user has successfully
	completed the game. Uses the same quotes.flg and endgame.flg method
	as the original, but puts them in the SAVEGAME directories instead
	of STATIC.
	* cheat.cc: cheating is off by default

2001-09-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc:fixed crash on transferring items from leaving party member

2001-09-05  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Actor): Fiddling with follow() again.

	* frameseq.h: Find_unrotated() added to make walking a bit smoother.

2001-09-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/Makefile.am: let automake handle the .l and .y files

2001-09-04  Max Horn  <max@quendi.de>
	* worked on the configure system, re-added various files back to CVS,
	like config.guess, config.sub etc. Those will be re-generated by
	autogen.sh if needed, but the supplied version should be just fine usually
	
2001-09-04  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/chunks.cc:  Rewrote part of is_blocked() to handle the way
	SI specifies locations in path_run_usecode().

2001-09-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: fixed minor bug
