@@ -1208,11 +1208,13 @@ void Game_window::read_ireg_objects
 			obj->set_low_lift (entry[4] & 0xF);
 			obj->set_high_shape (entry[3] >> 7);
 
-#if 0	/* Causes too much trouble. */
-			if (!container && // Special case:  food.
-			    shnum == 377)
-				oflags &= ~(1<<Obj_flags::okay_to_take);
-#endif
+					// Wierd use of flag:
+			if (info.has_quantity())
+				if (!(quality&0x80))
+					oflags &= 
+						~(1<<Obj_flags::okay_to_take);
+				else
+					quality &= 0x7f;
 			}
 		else if (entlen == 12)	// Container?
 			{
